examples/envoy/proxy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001

static_resources:
  clusters:
    - name: ratelimit
      type: STRICT_DNS
      connect_timeout: 1s
      lb_policy: ROUND_ROBIN
      protocol_selection: USE_CONFIGURED_PROTOCOL
      http2_protocol_options: {}
      load_assignment:
        cluster_name: ratelimit
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ratelimit
                      port_value: 8081
    - name: somecluster
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: somecluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: auth
                      port_value: 8080

  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8888
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: edge_http
              use_remote_address: true
              route_config:
                name: local_route
                virtual_hosts:
                - name: namespace.local_service
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/resources" }
                    route:
                      cluster: somecluster
                      rate_limits:
                      - actions:
                        - {generic_key: {descriptor_value: client}}
                        - {remote_address: {}}
                      - actions:
                        - {generic_key: {descriptor_value: resources}}
                        - header_value_match:
                            descriptor_value: post_request
                            headers:
                            - name: ":method"
                              exact_match: POST
                      - actions:
                        - {generic_key: {descriptor_value: resources}}
                  - match: { prefix: "/" }
                    route:
                      cluster: somecluster
                      rate_limits:
                      - actions:
                        - {generic_key: {descriptor_value: client}}
                        - {remote_address: {}}
                  - match: { prefix: "/tools.descartes.teastore.auth/rest/ready/isready" }
                    route:
                      cluster: somecluster
                      rate_limits:
                      - actions:
                        - {generic_key: {descriptor_value: client}}
                        - {remote_address: {}}
              http_filters:
              - name: envoy.filters.http.ratelimit
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
                  domain: domain1
                  enable_x_ratelimit_headers: DRAFT_VERSION_03
                  rate_limit_service:
                    transport_api_version: V3
                    grpc_service:
                        envoy_grpc:
                          cluster_name: ratelimit
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
